# swagger/swagger.json
@@ -15,13 +15,13 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/facturacion_electronica/": {
+        "/tercero_pago/": {
             "get": {
                 "tags": [
-                    "facturacion_electronica"
+                    "tercero_pago"
                 ],
                 "description": "Obtiene todos los registros",
-                "operationId": "FacturacionElectronicaController.GetAll",
+                "operationId": "TerceroPagoController.GetAll",
                 "responses": {
                     "200": {
                         "description": "",
@@ -39,10 +39,10 @@
             },
             "post": {
                 "tags": [
-                    "facturacion_electronica"
+                    "tercero_pago"
                 ],
                 "description": "Inserta un nuevo registro enviándolo al servicio JBPM",
-                "operationId": "FacturacionElectronicaController.Post",
+                "operationId": "TerceroPagoController.Post",
                 "parameters": [
                     {
                         "in": "body",
@@ -79,13 +79,13 @@
                 }
             }
         },
-        "/facturacion_electronica/{id}": {
+        "/tercero_pago/{id}": {
             "put": {
                 "tags": [
-                    "facturacion_electronica"
+                    "tercero_pago"
                 ],
                 "description": "Actualiza un registro existente enviando los datos al servicio JBPM",
-                "operationId": "FacturacionElectronicaController.Put",
+                "operationId": "TerceroPagoController.Put",
                 "parameters": [
                     {
                         "in": "path",
@@ -138,13 +138,13 @@
                 }
             }
         },
-        "/facturacion_electronica/{id}/{anio}": {
+        "/tercero_pago/{id}/{anio}": {
             "get": {
                 "tags": [
-                    "facturacion_electronica"
+                    "tercero_pago"
                 ],
                 "description": "Obtiene un registro por su ID y año",
-                "operationId": "FacturacionElectronicaController.GetOne",
+                "operationId": "TerceroPagoController.GetOne",
                 "parameters": [
                     {
                         "in": "path",
